--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     networks:
       - hellish-network
   mongo:
-    image: mongo
+    image: mongo:4.4
     restart: always
     ports:
       - 27017:27017
